# kh-recoded-recomp

./: .gitignore  CMakeLists.txt  README.md  patch_hwsave2.sh  patch_hwsave3.sh  run_recoded.sh  setup.bat  setup.sh  vcpkg.json
docs/superpowers/plans/: 2026-04-21-qt6-migration.md  2026-04-24-boot-to-playable-recovery-plan.md
docs/superpowers/validation/: 2026-04-24-boot-control-flow-findings.tsv  2026-04-24-boot-helper-shortcuts.tsv
lifter/: CMakeLists.txt
lifter/src/: arm_decoder.cpp  arm_decoder.h  c_emitter.cpp  c_emitter.h  main.cpp  optimization.cpp
lifter/tests/: test_decoder.cpp  test_emitter.cpp
mod_api/: CMakeLists.txt
mod_api/include/: hook_registry.h  recomp_api.h
mod_api/src/: hook_dispatcher.cpp  hook_registry.cpp  mod_loader.cpp
mod_api/tests/: test_mod_api.cpp
recoded/: .extract_stamp
recoded/data/: font_eu_08_all.nftr  font_eu_10all.nftr  font_jp_08_all.nftr  font_jp_10all.nftr  pc.pak
recoded/data/ET/: Grid.pak.z
recoded/data/FaceTest/: kao.pbg.z  kao2.pbg.z  kao3.pbg.z
recoded/data/ba/ch/: da.z  mp.z  se.p2  sp.z
recoded/data/ba/ef/: as.p2  dbhit.z  dbhit_tx.z  ef.p2  info.p.z  mi_en.z  mi_en_tx.z  mi_es.z  mi_es_tx.z  mi_fr.z  mi_fr_tx.z  st_en.p.z  st_es.p.z  st_fr.p.z  st_ta.p.z  st_tam.p.z  stef.p2  ta.p.z
recoded/data/ba/ma/: ma.p2
recoded/data/ba/tr/: tr
recoded/data/clear/: clear.p2f
recoded/data/clear/en/: clear.p2f  clear_obj.p2f
recoded/data/clear/es/: clear.p2f  clear_obj.p2f
recoded/data/clear/fr/: clear.p2f  clear_obj.p2f
recoded/data/cm/: AR  AS  BZ  DB  DD  DT  EB  Ho  MF  MR  QC  RB  SR  TC
recoded/data/cnt/: cnt.bgui.z  cnt.pbg.z  con_de.s.z  con_en.s.z  con_es.s.z  con_fr.s.z  con_it.s.z  con_ja.s.z  soanm.p.z
recoded/data/db/: db.p2  de.p2  en.p2  es.p2  fr.p2  it.p2  ja.p2
recoded/data/en/: DEBUG_SPHERE.z  Sphere.pak.z  aw02_col.z  coll.z  map.z
recoded/data/en/am/: 0100.ap2  0101.ap2  0102.ap2  6700.ap2
recoded/data/en/ef/: ef.p2f
recoded/data/en/pa/: DD.p2f  DE.p2f  DP.p2f
recoded/data/en/pt/: 0000.p2
recoded/data/ev/: EV_W01.p2  EV_W02.p2  EV_W03.p2  EV_W04.p2  EV_W05.p2  EV_W06.p2  EV_W07.p2  EV_W08.p2  EV_W09.p2  dummy.z  ecam.p2
recoded/data/ev/2D/: EV_W01.p2  EV_W02.p2  EV_W03.p2  EV_W04.p2  EV_W05.p2  EV_W06.p2  EV_W07.p2  EV_W08.p2  bg.p2  chtex.p2  obj.p2
recoded/data/ev/ch/: 01.z  02.z  06.z  07.z  08.z  0A.z  0B.z  0C.z  0D.z  0E.z  0F.z  10.z  11.z  12.z  13.z  14.z  15.z  16.z  17.z  18.z  19.z  1A.z  1B.z  1D.z  1E.z  1F.z  20.z  21.z  22.z  23.z  24.z  25.z  26.z  27.z  28.z  29.z  2A.z  2B.z  2C.z  2D.z  (+3 more)
recoded/data/ev/mo/: d_si_1.p2  d_si_2.p2  d_si_3.p2  do.p2  n_d_si.p2  so.p2  so_we.p2  trm_0.p2  trm_1.p2
recoded/data/ev/ob/: 00.z  01.z  02.z  03.z  04.z  05.z  06.z  07.z  08.z  09.z  0A.z  0B.z  0C.z  0D.z  0E_de.z  0E_en.z  0E_es.z  0E_fr.z  0E_it.z  0E_ja.z  0F.z  10.z  11.z  12.z  13.z  14.z  15.z  16.z  17.z  18.z  19.z  1A.z  1B.z  1C.z  1D.z  1E.z  1F.z  20.z  21.z  22.z  (+102 more)
recoded/data/mi/mi/: 100  101  200  201  300  301  400  401  500  501  600  601  700  (+3 more)
recoded/data/mo/: mo  pz.z  sd.z
recoded/data/mv/: MV.p2  w2_OP.mods  w8_ED3.mods
recoded/data/op/: op.p2  scr.z
recoded/data/pause/: etcicon.NSCR.z  pausebg_en.pbg.z  pausebg_es.pbg.z  pausebg_fr.pbg.z  pauseicon.NSCR.z
recoded/data/sf/: sf.p2  sf.z  sffont_10.nftr  sffont_8.nftr
recoded/data/text/: font_eu_08.nftr  font_eu_08s.nftr  font_eu_10.nftr  font_eu_10s.nftr  font_jp_08.nftr  font_jp_10.nftr
recoded/data/ttl/: title_en.s.z  title_es.s.z  title_fr.s.z  ttl.p2  ttl_en.p2  ttl_es.p2  ttl_fr.p2
recoded/data/ui/: smx_map.z
recoded/data/wf/: box.pak  cylinder.pak  sphere.pak
recoded/data/wxc/: sch.p2  sch_en.p2  sch_es.p2  sch_fr.p2  scr_en.s.z  scr_es.s.z  scr_fr.s.z  wla.p2  wlal1_en.pobj.z  wlal1_es.pobj.z  wlal1_fr.pobj.z  wlau1_en.pobj.z  wlau1_es.pobj.z  wlau1_fr.pobj.z  wlau_en.pbg.z  wlau_es.pbg.z  wlau_fr.pbg.z  wld.p2  wld_back.p2  wld_bar.p2  wld_en.p2  wld_en_back.p2  wld_en_bar.p2  wld_es.p2  wld_es_back.p2  wld_es_bar.p2  wld_fr.p2  wld_fr_back.p2  wld_fr_bar.p2  wldl1_en.pobj.z  wldl1_es.pobj.z  wldl1_fr.pobj.z  wldu1_en.pobj.z  wldu1_es.pobj.z  wle.p2  wlel1_en.pobj.z  wlel1_es.pobj.z  wlel1_fr.pobj.z  wleu1_en.pobj.z  wleu1_es.pobj.z  (+25 more)
runtime/: CMakeLists.txt
runtime/src/backends/: miniaudio_backend.cpp  miniaudio_backend.h  sdl_renderer.cpp  sdl_renderer.h  sw_renderer.cpp  sw_renderer.h  vk_renderer.cpp  vk_renderer.h
runtime/src/core/: cpu_context.h  ds_debug.h  dynamic_dispatcher.cpp  dynamic_dispatcher.h  lz_decompress.cpp  lz_decompress.h  main.cpp  master_registration_fallback.cpp  memory_map.cpp  memory_map.h  optimization.h  runtime_qt_frontend.cpp  runtime_qt_frontend.h  threading_engine.cpp  threading_engine.h  title_screen_loader.cpp  title_screen_loader.h
runtime/src/hw/: hw_2d_engine.cpp  hw_2d_engine.h  hw_audio.cpp  hw_audio.h  hw_bios.cpp  hw_bios.h  hw_dma.cpp  hw_dma.h  hw_gxengine.cpp  hw_gxengine.h  hw_input.cpp  hw_input.h  hw_ipc.cpp  hw_ipc.h  hw_irq.h  hw_itcm_helper_01001304.cpp  hw_mainram_helper_0202B454.cpp  hw_math.cpp  hw_math.h  hw_mic.cpp  hw_mic.h  hw_overlay.cpp  hw_overlay.h  hw_rtc.cpp  hw_rtc.h  hw_save.cpp  hw_save.h  hw_spi.cpp  hw_spi.h  hw_timers.cpp  hw_timers.h  hw_wifi.cpp  hw_wifi.h
runtime/src/vfs/: vfs.cpp  vfs.h
runtime/tests/: test_boot_recovery_plan.cpp  test_cpu_context.cpp  test_ds_debug.cpp  test_dynamic_dispatcher.cpp  test_hw_2d_engine.cpp  test_hw_audio.cpp  test_hw_bios.cpp  test_hw_dma.cpp  test_hw_gxengine.cpp  test_hw_input.cpp  test_hw_ipc.cpp  test_hw_irq.cpp  test_hw_math.cpp  test_hw_mic.cpp  test_hw_overlay.cpp  test_hw_rtc.cpp  test_hw_save.cpp  test_hw_spi.cpp  test_hw_timers.cpp  test_hw_wifi.cpp  test_master_phases.cpp  test_memory_map.cpp  test_miniaudio_backend.cpp  test_threading_engine.cpp  test_vfs.cpp
scratch/: build_probe.cmd  disasm.py  disasm2.py  disasm_probe.cpp  read_consts.py
scratch/capstone/: __init__.py
scratch/capstone-5.0.7.dist-info/: METADATA  RECORD
tools/: gdb_ds_addr.py  ghidra_import_lifter.py  patch_dump.py
tools/nds_extractor/ndstool/: ndstool
(+339 files in other folders)
